create com random choice animation

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <img src="images/paper.png" alt="" id="paper" width="100px">
                 <img src="images/scissors.png" alt="" id="scissors" width="100px">
             </div>
-            <div class="com-buttons">
+            <div id="com-buttons">
                 <img src="images/question.png" alt="" width="100px" id="com-select">
             </div>
         </div>
