add alt to some img

--- a/index.html
+++ b/index.html
@@ -20,26 +20,26 @@
                 <span>Round:</span> <span id="round"></span>
             </div>
             <div class="score" id="player-board">
-                <img src="/images/player.png" alt="" width="40px"> <span id="player-score">0</span>
+                <img src="/images/player.png" alt="player" width="40px"> <span id="player-score">0</span>
             </div>
             <div class="score" id="com-board">
-                <img src="/images/bot.png" alt="" width="40px"> <span id="com-score">0</span>
+                <img src="/images/bot.png" alt="com" width="40px"> <span id="com-score">0</span>
             </div>
         </div>
         <div class="button-board">
             <div class="player-buttons">
-                <img src="images/rock.png" alt="" id="rock" width="100px" class="img-button">
-                <img src="images/paper.png" alt="" id="paper" width="100px" class="img-button">
-                <img src="images/scissors.png" alt="" id="scissors" width="100px" class="img-button">
+                <img src="images/rock.png" alt="rock" id="rock" width="100px" class="img-button">
+                <img src="images/paper.png" alt="paper" id="paper" width="100px" class="img-button">
+                <img src="images/scissors.png" alt="scissors" id="scissors" width="100px" class="img-button">
             </div>
             <div id="com-buttons">
-                <img src="images/question.png" alt="" width="100px" id="com-select">
+                <img src="images/question.png" alt="question" width="100px" id="com-select">
             </div>
         </div>
     </div>
     <div id="popup">
         <div class="popup-title">
-            <img src="/images/player.png" alt="" width="100px" id="winner">
+            <img src="/images/player.png" alt="winner" width="100px" id="winner">
             <div id="result-quote">XXX</div>
         </div>
         <div class="continue-btn">
