remove slash from img src

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                 <span>Round:</span> <span id="round"></span>
             </div>
             <div class="score" id="player-board">
-                <img src="/images/player.png" alt="player" width="40px"> <span id="player-score">0</span>
+                <img src="images/player.png" alt="player" width="40px"> <span id="player-score">0</span>
             </div>
             <div class="score" id="com-board">
-                <img src="/images/bot.png" alt="com" width="40px"> <span id="com-score">0</span>
+                <img src="images/bot.png" alt="com" width="40px"> <span id="com-score">0</span>
             </div>
         </div>
         <div class="button-board">
@@ -39,7 +39,7 @@
     </div>
     <div id="popup">
         <div class="popup-title">
-            <img src="/images/player.png" alt="winner" width="100px" id="winner">
+            <img src="images/player.png" alt="winner" width="100px" id="winner">
             <div id="result-quote">XXX</div>
         </div>
         <div class="continue-btn">
